Layout bugfix

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,7 @@ header a.logo {
 
 header .main-title {
   position: relative;
-  margin-left: 50px;
+  margin-left: 0;
 }
 
 
